--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="Kirsten Rodriguez Resume CS008">
+  <meta name="author" content="862382596">
 
-  <title>John Doe - Business Administration</title>
+  <title>Kirsten Rodriguez - Sociology</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Kirsten Rodriguez</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
       </span>
@@ -58,26 +58,28 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Kirsten Rodriguez
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Sociology📚</div>
+        <p class="lead mb-4">My name is Kirsten Rodriguez. I currently reside in Riverside, California, but I have lived in several cities across my life. My journey through academia has been a dynamic one, marked by transitions between different states and schools. Having spent my formative high school years split between Centennial High School in Franklin, Tennessee, and Wissahickon High School in Ambler, Pennsylvania, I have not only adapted to diverse educational environments but also actively contributed to the communities I was a part of–no matter how long I was a part of them. My engagement at Centennial High School went beyond the classroom, as I found my niche as a photographer for the school yearbook. Capturing the vibrant essence of various clubs and activities, including the much-anticipated cultural assembly, allowed me to merge my love for photography with a sense of community involvement. Additionally, my commitment to civic responsibility led me to join the Young Democrats club, where I participated in voting drives and community outreach efforts, advocating for causes that resonated with our local community. 
+<br><br>
 
-        Enter bio here<br><br>
+        The onset of the COVID-19 pandemic prompted a shift to online learning for me, leading to my enrollment in online academies hosted by both Centennial High School and Wissahickon High School during my time in Tennessee and Pennsylvania, respectively. Although the virtual setting limited my participation in traditional school-sanctioned clubs and activities, I compensated by immersing myself in a rigorous schedule of Advanced Placement (AP) classes, further fueling my intellectual curiosity and commitment to academic excellence. Beyond academics, I have dedicated my time to volunteer work, fostering a sense of social responsibility from a young age. These experiences instilled in me a deep appreciation for community service and a passion for contributing to the well-being of others. My interests extend beyond the academic realm, as I find solace in self-expression through activities like nail art, indulging in cinematic experiences, and delving into the rich narratives of literature. These personal pursuits serve as a balance to the intensity of my academic commitments, providing me with a well-rounded perspective on life. 
+<br><br>
 
-        Enter bio here
+        As I navigate my sophomore year at UC Riverside, pursuing a degree in Sociology with a potential minor in Gender Studies, my commitment to societal change and understanding economic systems remains unwavering. I am driven by a fervent advocacy for equity and justice, motivated by the belief that positive change begins with individual contributions to a collective cause. While my professional journey is yet to begin, my extensive volunteer experience has laid the foundation for a future dedicated to making a positive impact on the world around me. I have volunteered at the Vanderbilt-Ingram Cancer Center In Nashville, Tennessee, participated in a number of cancer walks, and have meticulously crafted expressions of gratitude in the form of thank-you notes, extending appreciation to the participants of a cancer awareness event. As I continue to explore my academic interests and engage with diverse communities, I look forward to the challenges and opportunities that lie ahead, confident in my ability to contribute meaningfully to the betterment of society.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.sanrio.com/collections/new">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/kirstenjessicarodriguez">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.sanrio.com/collections/pochacco/products/sanrio-characters-mug-cute-camp-series">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:krodr183@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +94,45 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Yearbook</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Centennial High School</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Photographed school events such as football games, clubs, and assemblies<br> 
+              • Written articles on school events<br>
+              • Provided to a database of students, managing photographs and feature pages<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">2019-2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Young Democrats</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Centennial High School</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Rallied for social change<br>
+              • Participated in voting drives<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">2019-2020</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
+            <h3 class="mb-0">Student, Undergraduate degree in Sociology</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Current student at UCR
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">2022-2026</span>
           </div>
         </div>
 
@@ -152,33 +151,13 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors in Sociology</div>
+            <div>BA in Sociology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2022-June 2026</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
           </div>
         </div>
 
@@ -191,7 +170,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/pochacco lab3.jpeg" width="500px">
+            <img src="img/pochacco lab3 2.jpeg" width="500px"><br>
+            <img src="img/pochacco lab3 3" width="500px">
+            <img src="img/pocahcco lab3 4" width="500px"><br>
         </center>
       </div>
     </section>
